# Multi-style-Audio-Keyboard-Mapping-Player

./: LICENSE  README.md  error-tauri.txt  style-sampler-demo.html  多风格音频键盘映射播放器需求规格说明书.md
docs/superpowers/plans/: 2026-05-14-style-sampler.md
style-sampler/: .gitignore  Cargo.toml  index.html  启动.bat  启动.sh
style-sampler-final/: Cargo.toml  README.md  index.html  启动.bat
style-sampler-final/src-tauri/: Cargo.toml  index.html  tauri.conf.json
style-sampler-final/src-tauri/capabilities/: default.json
style-sampler-final/src-tauri/src/: lib.rs  main.rs
style-sampler-final/src-tauri/src/audio/: engine.rs  loop_handler.rs  mod.rs  playhead.rs  sample.rs  switcher.rs
style-sampler-final/src-tauri/src/config/: mod.rs
style-sampler-final/src-tauri/src/dsp/: chorus.rs  delay.rs  filter.rs  reverb.rs
style-sampler-final/src-tauri/src/input/: keyboard.rs  mod.rs
style-sampler-final/src-tauri/src/ipc/: commands.rs
style-sampler-final/src-tauri/src/recorder/: mod.rs
style-sampler-final/tests/: audio_tests.rs
style-sampler/src-tauri/: tauri.conf.json
style-sampler/src-tauri/src/: main.rs
style-sampler/src-tauri/src/audio/: loop_handler.rs  output.rs  playhead.rs  sample.rs
style-sampler/src-tauri/src/config/: settings.rs
style-sampler/src-tauri/src/dsp/: distortion.rs  mod.rs  reverb.rs
style-sampler/src-tauri/src/input/: midi.rs
style-sampler/src-tauri/src/ipc/: commands.rs  events.rs  mod.rs
style-sampler/src-tauri/src/recorder/: exporter.rs
style-sampler/tests/: dsp_tests.rs
