[package]
name = "style-sampler"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav"] }
hound = "3.5"
rubato = "0.15"
rdev = "0.5"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
